force-app/main/default/objects/Resource__c/fields/Available_Percent__c.field-meta.xml
<CustomField>
    <fullName>Available_Percent__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Available Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>