force-app/main/default/objects/Resource__c/fields/Bench_Age_Days__c.field-meta.xml
<CustomField><fullName>Bench_Age_Days__c</fullName><description>Continuous bench age as of today.</description><formula>IF(ISBLANK(Bench_Start_Date__c), 0, TODAY() - Bench_Start_Date__c)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Bench Age Days</label><precision>8</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>