force-app/main/default/objects/Resource__c/fields/Bench_Start_Date__c.field-meta.xml
<CustomField><fullName>Bench_Start_Date__c</fullName><description>Date continuous available or bench capacity began.</description><label>Bench Start Date</label><trackHistory>false</trackHistory><type>Date</type></CustomField>