force-app/main/default/objects/Resource__c/fields/Capacity_As_Of__c.field-meta.xml
<CustomField><fullName>Capacity_As_Of__c</fullName><label>Capacity As Of</label><required>false</required><trackHistory>true</trackHistory><type>Date</type></CustomField>