force-app/main/default/objects/Resource__c/fields/Consecutive_Overallocation_Days__c.field-meta.xml
<CustomField><fullName>Consecutive_Overallocation_Days__c</fullName><description>Rolling count of consecutive days above standard capacity.</description><label>Consecutive Overallocation Days</label><precision>5</precision><scale>0</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>