force-app/main/default/objects/Resource__c/fields/Daily_Capacity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Daily_Capacity_Hours__c</fullName>
    <defaultValue>8</defaultValue>
    <label>Daily Capacity Hours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>