force-app/main/default/objects/Resource__c/fields/Employment_End__c.field-meta.xml
<CustomField>
    <fullName>Employment_End__c</fullName>
    <label>Employment End</label>
    <type>Date</type>
</CustomField>