force-app/main/default/objects/Resource__c/fields/Employment_Start__c.field-meta.xml
<CustomField>
    <fullName>Employment_Start__c</fullName>
    <label>Employment Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>