force-app/main/default/objects/Resource__c/fields/Entra_Object_ID__c.field-meta.xml
<CustomField><fullName>Entra_Object_ID__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Entra Object ID</label><length>80</length><type>Text</type><unique>true</unique></CustomField>