force-app/main/default/objects/Resource__c/fields/Expected_Roll_Off_Date__c.field-meta.xml
<CustomField><fullName>Expected_Roll_Off_Date__c</fullName><description>Forecast date on which the current committed assignment is expected to release capacity.</description><label>Expected Roll-Off Date</label><trackHistory>false</trackHistory><type>Date</type></CustomField>