force-app/main/default/objects/Resource__c/fields/Org_Unit__c.field-meta.xml
<CustomField><fullName>Org_Unit__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Org Unit</label><referenceTo>R360_Org_Unit__c</referenceTo><relationshipLabel>Resources</relationshipLabel><relationshipName>Resources</relationshipName><type>Lookup</type></CustomField>