force-app/main/default/objects/Resource__c/fields/Org_Unit_ID__c.field-meta.xml
<CustomField><fullName>Org_Unit_ID__c</fullName><label>Org Unit ID</label><length>80</length><trackHistory>true</trackHistory><type>Text</type></CustomField>