force-app/main/default/objects/Resource__c/fields/Overallocated__c.field-meta.xml
<CustomField><fullName>Overallocated__c</fullName><defaultValue>false</defaultValue><label>Overallocated</label><trackHistory>true</trackHistory><type>Checkbox</type></CustomField>