force-app/main/default/objects/Resource__c/fields/Preferred_Capability__c.field-meta.xml
<CustomField><fullName>Preferred_Capability__c</fullName><description>Preferred capability-development direction.</description><label>Preferred Capability</label><length>120</length><trackHistory>false</trackHistory><type>Text</type></CustomField>