force-app/main/default/objects/Resource__c/fields/Preferred_Location__c.field-meta.xml
<CustomField><fullName>Preferred_Location__c</fullName><description>Practitioner project-location preference.</description><label>Preferred Location</label><length>80</length><trackHistory>false</trackHistory><type>Text</type></CustomField>