force-app/main/default/objects/Resource__c/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <label>Preferred Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>