force-app/main/default/objects/Resource__c/fields/Preferred_Project_Type__c.field-meta.xml
<CustomField><fullName>Preferred_Project_Type__c</fullName><description>Preferred delivery or project archetype.</description><label>Preferred Project Type</label><length>120</length><trackHistory>false</trackHistory><type>Text</type></CustomField>