force-app/main/default/objects/Resource__c/fields/Preferred_Shift__c.field-meta.xml
<CustomField><fullName>Preferred_Shift__c</fullName><description>Practitioner working-window preference.</description><label>Preferred Shift</label><length>80</length><trackHistory>false</trackHistory><type>Text</type></CustomField>