force-app/main/default/objects/Resource__c/fields/Primary_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Role__c</fullName>
    <label>Primary Salesforce Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>