force-app/main/default/objects/Resource__c/fields/Rolling_Overage_Hours_13W__c.field-meta.xml
<CustomField><fullName>Rolling_Overage_Hours_13W__c</fullName><description>Approved overage hours over the latest thirteen-week window.</description><label>Rolling Overage Hours 13W</label><precision>10</precision><scale>2</scale><trackHistory>false</trackHistory><type>Number</type></CustomField>