force-app/main/default/objects/Resource__c/fields/Salesforce_User__c.field-meta.xml
<CustomField><fullName>Salesforce_User__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Salesforce User</label><referenceTo>User</referenceTo><relationshipLabel>Resource 360 Worker Profiles</relationshipLabel><relationshipName>Resource360_Worker_Profiles</relationshipName><type>Lookup</type></CustomField>