force-app/main/default/objects/Resource__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <defaultValue>&quot;Asia/Kolkata&quot;</defaultValue>
    <label>Time Zone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>