force-app/main/default/objects/Resource__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <label>Salesforce Tower</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
                <label>Sales Cloud</label>
            </value>
            <value>
                <fullName>Service</fullName>
                <label>Service Cloud</label>
            </value>
            <value>
                <fullName>Data &amp; AI</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
                <default>true</default>
                <label>Delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>