force-app/main/default/objects/Resource__c/fields/Travel_Preference__c.field-meta.xml
<CustomField><fullName>Travel_Preference__c</fullName><description>Practitioner travel preference used as an advisory staffing factor.</description><label>Travel Preference</label><required>false</required><trackHistory>false</trackHistory><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>No travel</fullName><default>false</default><label>No travel</label></value><value><fullName>Up to 25%</fullName><default>false</default><label>Up to 25%</label></value><value><fullName>Up to 50%</fullName><default>false</default><label>Up to 50%</label></value><value><fullName>Flexible</fullName><default>false</default><label>Flexible</label></value></valueSetDefinition></valueSet></CustomField>