force-app/main/default/objects/Resource__c/fields/Utilization_Percent__c.field-meta.xml
<CustomField><fullName>Utilization_Percent__c</fullName><formula>IF(Daily_Capacity_Hours__c = 0, 0, Allocated_Daily_Hours__c / Daily_Capacity_Hours__c)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Allocation Utilization</label><precision>18</precision><required>false</required><scale>2</scale><type>Percent</type></CustomField>