force-app/main/default/objects/Resource__c/fields/Work_Calendar__c.field-meta.xml
<CustomField><fullName>Work_Calendar__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Work Calendar</label><referenceTo>R360_Work_Calendar__c</referenceTo><relationshipLabel>Resources</relationshipLabel><relationshipName>Resources</relationshipName><type>Lookup</type></CustomField>