force-app/main/default/objects/Resource__c/validationRules/Employment_Date_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Employment_Date_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Employment_End__c)), Employment_End__c &lt; Employment_Start__c)</errorConditionFormula>
    <errorMessage>Employment end date cannot precede the start date.</errorMessage>
</ValidationRule>