force-app/main/default/objects/Resource__c/validationRules/Valid_Daily_Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Daily_Capacity</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Daily_Capacity_Hours__c &lt;= 0, Daily_Capacity_Hours__c &gt; 24)</errorConditionFormula>
    <errorMessage>Daily capacity must be greater than zero and no more than 24 hours.</errorMessage>
</ValidationRule>